# finance-agent

./: .gitignore  LICENSE  README.md  init_meta_db.py  pyproject.toml
app/: main.py
app/agent/: graph.py  nodes.py  state.py
app/api/: dependencies.py
app/api/routes/: query.py
app/clients/: embedding_client_manager.py  es_client_manager.py  mysql_client_manager.py  qdrant_client_manager.py
app/conf/: app_config.py  meta_config.py
app/core/: context.py  lifespan.py  log.py
app/models/es/: value_info_es.py
app/models/mysql/: column_info_mysql.py  column_metric_mysql.py  metric_info_mysql.py  table_info_mysql.py
app/models/qdrant/: column_info_qdrant.py
app/repositories/es/: value_es_repository.py
app/repositories/mysql/: finance_mysql_repository.py  meta_mysql_repository.py
app/repositories/qdrant/: column_qdrant_repository.py  metric_qdrant_repository.py
app/scripts/: build_meta_knowledge.py  verify_es_values.py
app/services/: meta_knowledge_service.py
conf/: app_config.yaml.example  meta_config.yaml
prompts/: correct_sql.prompt  extend_keywords_for_column_recall.prompt  extend_keywords_for_metric_recall.prompt  extend_keywords_for_value_recall.prompt  filter_metric_info.prompt  filter_table_info.prompt  generate_sql.prompt
sql/: finance.sql  financemeta.sql  meta.sql
static/: index.html
